--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-canonical-urls": "^1.0.18",
     "gatsby-plugin-emotion": "^1.1.17",
+    "gatsby-plugin-netlify": "^1.0.21",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sharp": "^1.6.44",
