--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
   "extends": ["airbnb", "prettier"],
+  "plugins": ["prettier"],
   "rules": {
     "import/extensions": "off",
     "linebreak-style": "off",
-    "react/no-danger": "off"
+    "react/no-danger": "off",
+    "prettier/prettier": "error"
   },
   "globals": {
     "graphql": true
