--- a/package.json
+++ b/package.json
@@ -11,33 +11,32 @@
     }
   ],
   "dependencies": {
-    "classnames": "^2.2.5",
-    "emotion": "^9.1.3",
-    "emotion-server": "^9.1.3",
-    "emotion-theming": "^9.1.2",
-    "gatsby": "^1.9.247",
-    "gatsby-image": "^1.0.51",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-canonical-urls": "^1.0.18",
-    "gatsby-plugin-emotion": "^1.1.17",
-    "gatsby-plugin-netlify": "^1.0.21",
-    "gatsby-plugin-react-helmet": "^2.0.10",
+    "@emotion/core": "^10.0.6",
+    "@emotion/styled": "^10.0.6",
+    "classnames": "^2.2.6",
+    "emotion-theming": "^10.0.6",
+    "gatsby": "^2.0.91",
+    "gatsby-image": "^2.0.26",
+    "gatsby-link": "^2.0.8",
+    "gatsby-plugin-canonical-urls": "^2.0.8",
+    "gatsby-plugin-emotion": "^4.0.1",
+    "gatsby-plugin-netlify": "^2.0.6",
+    "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sharp": "^1.6.44",
-    "gatsby-remark-copy-linked-files": "^1.5.32",
-    "gatsby-remark-images": "^1.5.63",
-    "gatsby-remark-responsive-iframe": "^1.4.18",
-    "gatsby-remark-smartypants": "^1.4.12",
-    "gatsby-source-filesystem": "^1.5.35",
-    "gatsby-transformer-json": "^1.0.17",
-    "gatsby-transformer-remark": "^1.7.40",
-    "gatsby-transformer-sharp": "^1.6.24",
-    "modern-normalize": "^0.4.0",
-    "normalize.css": "^8.0.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-emotion": "^9.1.3",
+    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-remark-copy-linked-files": "^2.0.8",
+    "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-responsive-iframe": "^2.0.8",
+    "gatsby-remark-smartypants": "^2.0.7",
+    "gatsby-source-filesystem": "^2.0.16",
+    "gatsby-transformer-json": "^2.1.7",
+    "gatsby-transformer-remark": "^2.2.0",
+    "gatsby-transformer-sharp": "^2.1.10",
+    "modern-normalize": "^0.5.0",
+    "normalize.css": "^8.0.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "typeface-roboto": "^0.0.54"
   },
@@ -52,13 +51,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "prettier": "^1.12.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.16.0",
     "prettier-eslint-cli": "^4.7.1"
   }
 }
